[project]
name = "nexusviewumesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensure>=1.0.4",
    "flake8>=7.3.0",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "py-youtube>=1.1.7",
    "pytest>=9.0.2",
    "tox>=4.35.0",
]
